--- a/hims-frontend/src/app/dashboard/home/home.component.html
+++ b/hims-frontend/src/app/dashboard/home/home.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="user === 'admin'">
+<div *ngIf="user === 2">
     <div class="row d-flex justify-content-center align-items-center">
         <div class="col-xl-2 col-md-4 col-6 mt-4">
             <div class="card" [routerLink]="['/dashboard/hotel']">
@@ -40,14 +40,6 @@
                 </div>
             </div>
         </div>
-        <div class="col-xl-2 col-md-4 col-6 mt-4" [routerLink]="['/dashboard/report']">
-            <div class="card">
-                <div class="card-body">
-                    <h1 class="card-title text-center"><i class="bi bi-journal"></i></h1>
-                    <h6 class="card-subtitle mb-2 mt-3 text-center">Report</h6>
-                </div>
-            </div>
-        </div>
     </div>
     <div class="row d-flex justify-content-center align-items-center">
         <div class="col-xl-2 col-md-4 col-6 mt-4">
@@ -82,9 +74,17 @@
                 </div>
             </div>
         </div>
+        <div class="col-xl-2 col-md-4 col-6 mt-4" [routerLink]="['/dashboard/report']">
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="card-title text-center"><i class="bi bi-journal"></i></h1>
+                    <h6 class="card-subtitle mb-2 mt-3 text-center">Report</h6>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
-<div class="row d-flex justify-content-center align-items-center" *ngIf="user === 'general'">
+<div class="row d-flex justify-content-center align-items-center" *ngIf="user === 3">
     <div class="col-xl-2 col-md-4 col-6 mt-4">
         <div class="card" [routerLink]="['/dashboard/menu/item-receive']">
             <div class="card-body">
