--- a/hims-frontend/src/app/utilities/header/header.component.html
+++ b/hims-frontend/src/app/utilities/header/header.component.html
@@ -11,7 +11,7 @@
                         User
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end">
-                        <li><a class="dropdown-item">Logout</a></li>
+                        <li><a class="dropdown-item" (click)="logout()">Logout</a></li>
                     </ul>
                 </li>
             </ul>
