--- a/hims-frontend/src/app/dashboard/menu/item-receive/view/view.component.html
+++ b/hims-frontend/src/app/dashboard/menu/item-receive/view/view.component.html
@@ -7,15 +7,13 @@
             <tr>
                 <th span="col">S.No.</th>
                 <th span="col">Voucher Number</th>
-                <th span="col">Received Date</th>
                 <th span="col">Operations</th>
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>1</td>
-                <td>GC/HK/2223/0001</td>
-                <td>30/01/2023</td>
+            <tr *ngFor="let l of lists; let i=index">
+                <td>{{i+1}}</td>
+                <td>{{l.batch_no}}</td>
                 <td>Edit/Delete</td>
             </tr>
         </tbody>
