--- a/hims-frontend/src/app/dashboard/menu/item-transfer/item-transfer.component.html
+++ b/hims-frontend/src/app/dashboard/menu/item-transfer/item-transfer.component.html
@@ -1,1 +1,4 @@
-<p>item-transfer works!</p>
+<header class="text-center mb-2">
+    <h2>Item Transfer</h2>
+</header>
+<router-outlet></router-outlet>
