--- a/hims-frontend/src/app/dashboard/menu/item-receive/item-receive.component.html
+++ b/hims-frontend/src/app/dashboard/menu/item-receive/item-receive.component.html
@@ -1,4 +1,4 @@
 <header class="text-center mb-2">
-    <h2>Item Received</h2>
+    <h2>Item Receive</h2>
 </header>
 <router-outlet></router-outlet>
