--- a/hims-frontend/src/app/dashboard/home/home.component.html
+++ b/hims-frontend/src/app/dashboard/home/home.component.html
@@ -3,7 +3,7 @@
         <div class="card" [routerLink]="['/dashboard/masters/hotel']">
             <div class="card-body">
                 <h1 class="card-title text-center"><i class="bi bi-building-add"></i></h1>
-                <h6 class="card-subtitle mb-2 mt-3 text-center">Hotels</h6>
+                <h6 class="card-subtitle mb-2 mt-3 text-center">Hotel</h6>
             </div>
         </div>
     </div>
@@ -11,7 +11,7 @@
         <div class="card" [routerLink]="['/dashboard/masters/department']">
             <div class="card-body">
                 <h1 class="card-title text-center"><i class="bi bi-clipboard-plus"></i></h1>
-                <h6 class="card-subtitle mb-2 mt-3 text-center">Departments</h6>
+                <h6 class="card-subtitle mb-2 mt-3 text-center">Department</h6>
             </div>
         </div>
     </div>
@@ -24,18 +24,18 @@
         </div>
     </div>
     <div class="col-xl-2 col-md-4 col-6 mt-4" *ngIf="role === 1">
-        <div class="card" [routerLink]="['/dashboard/masters/user']">
+        <div class="card" [routerLink]="['/dashboard/masters/item']">
             <div class="card-body">
-                <h1 class="card-title text-center"><i class="bi bi-person-add"></i></h1>
-                <h6 class="card-subtitle mb-2 mt-3 text-center">Users</h6>
+                <h1 class="card-title text-center"><i class="bi bi-bag-plus"></i></h1>
+                <h6 class="card-subtitle mb-2 mt-3 text-center">Item</h6>
             </div>
         </div>
     </div>
     <div class="col-xl-2 col-md-4 col-6 mt-4" *ngIf="role === 1">
-        <div class="card" [routerLink]="['/dashboard/masters/item']">
+        <div class="card" [routerLink]="['/dashboard/masters/user']">
             <div class="card-body">
-                <h1 class="card-title text-center"><i class="bi bi-bag-plus"></i></h1>
-                <h6 class="card-subtitle mb-2 mt-3 text-center">Items</h6>
+                <h1 class="card-title text-center"><i class="bi bi-person-add"></i></h1>
+                <h6 class="card-subtitle mb-2 mt-3 text-center">User</h6>
             </div>
         </div>
     </div>
