--- a/hims-frontend/src/app/dashboard/masters/user/user.component.html
+++ b/hims-frontend/src/app/dashboard/masters/user/user.component.html
@@ -21,7 +21,7 @@
                         <i class="bi bi-pencil-square" style="color: blue;font-size: 20px;" (click)="onGetOperation({operation: 'update', id: u.id})"></i>
                         <i class="bi bi-trash3" style="color: red;font-size: 20px;" (click)="getDeleteMessage(u.id)"></i>
                     </div>
-                    <h5 class="card-title text-center mb-4" style="font-size: 50px;"><i class="bi bi-buildings"></i></h5>
+                    <h5 class="card-title text-center mb-4" style="font-size: 50px;"><i class="bi bi-person-bounding-box"></i></h5>
                     <h6 class="card-subtitle mb-4 text-center" style="font-size: 20px;">{{u.username}}</h6>
                 </div>
               </div>
