--- a/hims-frontend/src/app/dashboard/operations/item-receive/edit/edit.component.html
+++ b/hims-frontend/src/app/dashboard/operations/item-receive/edit/edit.component.html
@@ -7,6 +7,7 @@
         <div class="row">
             <div class="col-md-2">
                 <label class="form-label">Item</label>
+                <select class="form-select"></select>
             </div>
             <div class="col-md-2">
                 <label class="form-label">Batch No</label>
@@ -23,6 +24,9 @@
             <div class="col-md-2">
                 <label class="form-label">Expiry Date</label>
             </div>
+        </div>
+        <div class="row mt-3">
+
         </div>
     </form>
 </section>
