--- a/hims-frontend/src/app/dashboard/operations/item-receive/edit/edit.component.html
+++ b/hims-frontend/src/app/dashboard/operations/item-receive/edit/edit.component.html
@@ -3,89 +3,79 @@
         <h5>Receive Item</h5>
     </div>
     <hr>
-    <form>
-        <div class="row">
-            <div class="col-md-8 table-responsive">
-                <div class="table-responsive" *ngIf="items[0]">
-                    <div class="text-end">
-                        <button class="btn btn-primary mb-3" (click)="onSubmit();">Save</button>
-                    </div>
-                    <table class="table table-bordered">
-                        <thead>
-                            <tr>
-                                <th scope="col">S.No.</th>
-                                <th scope="col">Item</th>
-                                <th scope="col">Batch</th>
-                                <th scope="col">Opening Balance</th>
-                                <th scope="col">Quantity</th>
-                                <th scope="col">Price Per Unit</th>
-                                <th scope="col">Expiry</th>
-                                <th scope="col">Remarks</th>
-                                <th scope="col">Delete</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let i of items; let id=index">
-                                <td>{{ id+1 }}</td>
-                                <td>{{ i.item_name }}</td>
-                                <td>{{ i.batch_no }}</td>
-                                <td>{{ i.opening_balance }}</td>
-                                <td>{{ i.quantity_received }}</td>
-                                <td>{{ i.unit_price }}</td>
-                                <td>{{ i.expiry_date }}</td>
-                                <td>{{ i.remarks || '' }}</td>
-                                <td><i class="bi bi-trash3 text-danger" (click)="onDeleteItem(i.item_name)"></i></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+    <div class="table-responsive">
+        <div class="d-flex justify-content-between mb-2" *ngIf="items[0]">
+            <div style="width: 20%">
+                <input type="text" class="form-control" placeholder="Enter Batch No." (keyup)="onEnter()" [disabled]="batch_no" [(ngModel)]="batch_no" name="batch_no" #batch required>
+                <small class="text-danger" *ngIf="batchErr && batch_no === ''">Please enter batch no</small>
             </div>
-            <div class="col-md-4">
-                <form #receive="ngForm" (ngSubmit)="onAddItems(receive)">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <label class="form-label">Item</label>
-                            <select class="form-select" ngModel name="item_id" #item_id="ngModel" required (change)="onGetNamesValue($event)">
-                                <option value="">---Select Options---</option>
-                                <option *ngFor="let i of item_master" [value]="i.id">{{i.name}}</option>
-                            </select>
-                        </div>
-                        <div class="col-md-6">
-                            <label class="form-label">Batch No</label>
-                            <input type="text" class="form-control" ngModel name="batch" #batch="ngModel" required>
-                        </div>
-                    </div>
-                    <div class="row mt-3">
-                        <div class="col-md-6">
-                            <label class="form-label">Opening Balance</label>
-                            <input type="text" class="form-control" ngModel name="opening_balance" #opening_balance="ngModel" required>
-                        </div>
-                        <div class="col-md-6">
-                            <label class="form-label">Quantity Received</label>
-                            <input type="text" class="form-control" ngModel name="quantity_received" #quantity_received="ngModel" required>
-                        </div>
-                    </div>
-                    <div class="row mt-3">
-                        <div class="col-md-6">
-                            <label class="form-label">Price Per Unit</label>
-                            <input type="text" class="form-control" ngModel ngModel name="price_per_unit" #price_per_unit="ngModel" required>
-                        </div>
-                        <div class="col-md-6">
-                            <label class="form-label">Expiry Date</label>
-                            <input type="date" class="form-control" ngModel name="expiry" #expiry="ngModel" required>
-                        </div>
-                    </div>
-                    <div class="row mt-3">
-                        <div class="col-md-12">
-                            <label class="form-label">Remarks</label>
-                            <textarea class="form-control" rows="3" ngModel name="remarks" #remarks="ngModel"></textarea>
-                        </div>
-                    </div>
-                    <div class="mt-3 mb-3 text-center">
-                        <button class="btn btn-primary" type="submit">Add</button>
-                    </div>
-                </form>
-            </div>
+            <button class="btn btn-primary mb-2" (click)="onSubmit();">Save</button>
         </div>
-    </form>
+        <div class="text-center" *ngIf="!items[0]" style="margin-bottom: 30px;">
+            <h4>No Items</h4>
+        </div>
+        <table class="table table-bordered" *ngIf="items[0]" style="margin-bottom: 30px;">
+            <thead>
+                <tr>
+                    <th scope="col">S.No.</th>
+                    <th scope="col">Item</th>
+                    <th scope="col">Opening Balance</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col">Price Per Unit</th>
+                    <th scope="col">Expiry</th>
+                    <th scope="col">Remarks</th>
+                    <th scope="col">Operations</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let i of items; let id=index">
+                    <td>{{ id+1 }}</td>
+                    <td>{{ i.item_name }}</td>
+                    <td>{{ i.opening_balance }}</td>
+                    <td>{{ i.quantity_received }}</td>
+                    <td>{{ i.unit_price }}</td>
+                    <td>{{ i.expiry_date }}</td>
+                    <td>{{ i.remarks || '' }}</td>
+                    <td><i class="bi bi-trash3 text-danger" (click)="onDeleteItem(i.item_name)"></i></td>
+                </tr>
+            </tbody>
+        </table>
+        <hr>
+        <div style="margin-top: 30px;">
+            <form #receive="ngForm" (ngSubmit)="onAddItems(receive)">
+                <div class="row">
+                    <div class="col-md-3">
+                        <label class="form-label">Item</label>
+                        <select class="form-select" ngModel name="item_id" #item_id="ngModel" required (change)="onGetNamesValue($event)">
+                            <option value="">---Select Options---</option>
+                            <option *ngFor="let i of item_master" [value]="i.id">{{i.name}}</option>
+                        </select>
+                    </div>
+                    <div class="col-md-1">
+                        <label class="form-label">Opening Balance</label>
+                        <input type="text" class="form-control" ngModel name="opening_balance" #opening_balance="ngModel" required>
+                    </div>
+                    <div class="col-md-1">
+                        <label class="form-label">Quantity</label>
+                        <input type="text" class="form-control" ngModel name="quantity_received" #quantity_received="ngModel" required>
+                    </div>
+                    <div class="col-md-1">
+                        <label class="form-label">Price Per Unit</label>
+                        <input type="text" class="form-control" ngModel ngModel name="price_per_unit" #price_per_unit="ngModel" required>
+                    </div>
+                    <div class="col-md-2">
+                        <label class="form-label">Expiry Date</label>
+                        <input type="date" class="form-control" ngModel name="expiry" #expiry="ngModel" required>
+                    </div>
+                    <div class="col-md-3">
+                        <label class="form-label">Remarks</label>
+                        <input type="text" class="form-control" ngModel name="remarks" #remarks="ngModel">
+                    </div>
+                    <div class="col-md-1" style="margin-top: 31px">
+                        <button class="btn btn-primary" style="width: 100%" type="submit">Add</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 </section>
