--- a/hims-frontend/src/app/dashboard/operations/item-damage/edit/edit.component.html
+++ b/hims-frontend/src/app/dashboard/operations/item-damage/edit/edit.component.html
@@ -1,14 +1,10 @@
 <section class="px-5">
     <div class="mt-3">
-        <h5>Receive Item</h5>
+        <h5>Discard Item</h5>
     </div>
     <hr>
     <div class="table-responsive">
-        <div class="d-flex justify-content-between mb-2" *ngIf="items[0]">
-            <div style="width: 20%">
-                <input type="text" class="form-control" placeholder="Enter Batch No." (keyup)="onEnter()" [disabled]="editMode" [(ngModel)]="batch_no" name="batch_no" #batch required>
-                <small class="text-danger" *ngIf="batchErr && batch_no === ''">Please enter batch no</small>
-            </div>
+        <div class="text-end" *ngIf="items[0]">
             <button class="btn btn-primary mb-2" (click)="onSubmit();">Save</button>
         </div>
         <div class="text-center" *ngIf="!items[0]" style="margin-bottom: 30px;">
@@ -21,8 +17,6 @@
                     <th scope="col">Item</th>
                     <th scope="col">Opening Balance</th>
                     <th scope="col">Quantity</th>
-                    <th scope="col">Price Per Unit</th>
-                    <th scope="col">Expiry</th>
                     <th scope="col">Remarks</th>
                     <th scope="col">Operations</th>
                 </tr>
@@ -32,45 +26,35 @@
                     <td>{{ id+1 }}</td>
                     <td>{{ i.item_name }}</td>
                     <td>{{ i.opening_balance }}</td>
-                    <td>{{ i.quantity_received }}</td>
-                    <td>{{ i.unit_price }}</td>
-                    <td>{{ i.expiry_date }}</td>
+                    <td>{{ i.quantity_damaged }}</td>
                     <td>{{ i.remarks || '' }}</td>
                     <td><i class="bi bi-trash3 text-danger" (click)="onDeleteItem(i.item_name)"></i></td>
                 </tr>
             </tbody>
         </table>
         <div class="alert alert-success mt-3" *ngIf="showSuccess === 'true'">
-            Items Received Successfully
+            Items Discarded Successfully
         </div>
         <hr>
         <div style="margin-top: 30px;">
-            <form #receive="ngForm" (ngSubmit)="onAddItems(receive)">
+            <form #damaged="ngForm" (ngSubmit)="onAddItems(damaged)">
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <label class="form-label">Item</label>
                         <select class="form-select" ngModel name="item_id" #item_id="ngModel" required (change)="onGetNamesValue($event)">
                             <option value="">---Select Options---</option>
                             <option *ngFor="let i of item_master" [value]="i.id">{{i.name}}</option>
                         </select>
                     </div>
-                    <div class="col-md-1">
+                    <div class="col-md-2">
                         <label class="form-label">Opening Balance</label>
                         <input type="text" class="form-control" ngModel name="opening_balance" #opening_balance="ngModel" required>
                     </div>
                     <div class="col-md-1">
                         <label class="form-label">Quantity</label>
-                        <input type="text" class="form-control" ngModel name="quantity_received" #quantity_received="ngModel" required>
+                        <input type="text" class="form-control" ngModel name="quantity_damaged" #quantity_damaged="ngModel" required>
                     </div>
-                    <div class="col-md-1">
-                        <label class="form-label">Price Per Unit</label>
-                        <input type="text" class="form-control" ngModel ngModel name="price_per_unit" #price_per_unit="ngModel" required>
-                    </div>
-                    <div class="col-md-2">
-                        <label class="form-label">Expiry Date</label>
-                        <input type="date" class="form-control" ngModel name="expiry" #expiry="ngModel" required>
-                    </div>
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <label class="form-label">Remarks</label>
                         <input type="text" class="form-control" ngModel name="remarks" #remarks="ngModel">
                     </div>
