--- a/hims-frontend/src/app/dashboard/masters/user/user.component.html
+++ b/hims-frontend/src/app/dashboard/masters/user/user.component.html
@@ -19,7 +19,7 @@
                 <div class="card-body">
                     <div class="d-flex justify-content-between">
                         <i class="bi bi-pencil-square" style="color: blue;font-size: 20px;" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="onGetOperation({operation: 'update', id: u.id})"></i>
-                        <i class="bi bi-trash3" style="color: red;font-size: 20px;" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="getDeleteMessage(u.id)"></i>
+                        <i *ngIf="u.related_groups[0].id != 1" class="bi bi-trash3" style="color: red;font-size: 20px;" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="getDeleteMessage(u.id)"></i>
                     </div>
                     <h5 class="card-title text-center mb-4" style="font-size: 50px;"><i class="bi bi-person-bounding-box"></i></h5>
                     <h6 class="card-subtitle mb-4 text-center" style="font-size: 20px;">{{u.username}}</h6>
@@ -43,7 +43,7 @@
                     </div>
                     <ng-template #form>
                         <div class="row px-2 mb-2">
-                            <div class="row">
+                            <div class="row" *ngIf="user.username != 'admin'">
                                 <div class="col-md-6">
                                     <label class="form-label">Select Hotel</label>
                                     <select class="form-select" [ngModel]="user.hotel" name="hotel_id" #hotel_id="ngModel" required>
@@ -59,7 +59,7 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="row mt-3">
+                            <div class="row mt-3" *ngIf="user.username != 'admin'">
                                 <div class="col-md-6">
                                     <label class="form-label">First Name</label>
                                     <input class="form-control" type="text" [ngModel]="user.first_name" name="fname" #fname="ngModel" required>
